overflow fixed

--- a/assets/css/_global-style.scss
+++ b/assets/css/_global-style.scss
@@ -18,7 +18,7 @@ body {
 	margin:0;
 	padding:0;
 	background:white;
-	//overflow-x: hidden;
+	overflow-x: hidden;
 }
 a
 {
